margins fixed and phone number hided

--- a/src/styles/pages/home.css
+++ b/src/styles/pages/home.css
@@ -223,7 +223,9 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        margin-top: 100px;
+        margin-top: 50px;
+        margin-bottom: -70px;
+        
     }
     
     .home-container .sobre h3 {
@@ -476,6 +478,7 @@
         color: #FFF;
         font-size: 40px;
         letter-spacing: 10px;
+        margin-bottom: 25px;
     }
     
     .home-container .services-content {
@@ -530,6 +533,7 @@
         color: #FFF;
         font-size: 40px;
         letter-spacing: 10px;
+        margin-bottom: 25px;
     }
     
     .home-container .sobre-content {
