--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -1,6 +1,6 @@
 /* Responsive 460px ======================================================================= */
 
-@media (max-width: 460px) {
+@media (min-width: 360px) {
     header {
         display: flex;
         align-items: center;
@@ -164,7 +164,9 @@
 
 }
 
-@media (min-width: 960px){
+/* Responsive max 760px ======================================================================= */
+
+@media (min-width: 560px){
     header {
         display: flex;
         align-items: center;
@@ -180,10 +182,180 @@
         top: 0;
         right: 0;
         
-        width: 30%;
+        width: 25%;
         height: 100%;
 
         background-color: #1B1D20;
+        border-top-left-radius: 20px;
+
+        /* animation: name duration timing-function delay iteration-count direction fill-mode; */
+        animation: slideLef 5s;
+
+    }
+
+    @keyframes slideLef {
+        0% {
+            transform: translate(500px, 0);
+        }
+        25% {
+            transform: translate(-500px, 0);
+        }
+        50% {
+            transform: translate(200px, 0);
+        }
+        75% {
+            transform: translate(-200px, 0);
+        }
+        100% {
+            transform: translate(0, 0);
+        }
+    }   
+
+    header .menu-mobile ul {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+
+        position: absolute;
+        top: 10%;
+        right: 10%;
+        left: 10%;
+
+        animation: slideLef 2s;
+
+    }
+
+    header .menu-mobile ul li{
+        list-style: none;
+        margin-top: 15%;
+        margin-bottom: 15%;
+    }
+
+    header .menu-mobile ul li a {
+        text-decoration: none;
+        font-size: 16px;
+        color: #F0F0F4;
+    }
+    
+    header #logo {
+        width: 300px;
+        height: 300px;
+        position: absolute;
+
+        top: 0;
+        left: 0;
+    }
+    
+    header ul {
+        display: none;
+        animation: slideLef 2s;
+    }
+    
+    header ul li {
+        list-style: none;
+    }
+    
+    header ul li a{
+        font-size: 16px;
+        color: #FFF;
+        text-decoration: none;
+        letter-spacing: 2px;
+        
+        transition-property: color, border;
+        transition-duration: 1s;
+        
+    }
+    
+    header ul li a:hover {
+        color: #511A80;
+        border-bottom: 1px solid #511A80;
+    }
+
+    header .menu-button-active {
+        all: unset;
+        display: block;
+        border: none;
+        
+        width: 40px;
+        height: 40px;
+
+        position: absolute;
+        right: 10px;
+        top: 10px;
+
+        cursor: pointer;
+    }
+    
+    header .menu-x-button-active {
+        all: unset;
+        display: block;
+        border: none;
+        
+        width: 60px;
+        height: 60px;
+        
+        position: absolute;
+        right: 10px;
+        top: 10px;
+
+        cursor: pointer;
+    }
+
+    header .menu-button-inactive {
+        display: none;
+    }
+
+    header .menu-x-button-inactive {
+        display: none;
+    }
+
+    header .menu-button {
+        animation: pulse 0.5s infinite;
+    }
+
+    @keyframes pulse {
+        0% {
+            background: #1B1D20;
+        }
+        25% {
+            background: #2a0845;
+        }
+        25% {
+            background: #2a0845;
+        }
+        75% {
+            background: #2a0845;
+        }
+        100% {
+            background: #1B1D20;
+        }
+    }
+}
+
+/* Responsive max 1mipx ======================================================================= */
+
+@media (min-width: 720px){
+    header {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    
+        width: 100%;
+        height: 10%;
+        position: relative;
+    }
+
+    header .menu-mobile {
+        position: fixed;
+        top: 0;
+        right: 0;
+        
+        width: 25%;
+        height: 100%;
+
+        background-color: #1B1D20;
+        border-top-left-radius: 20px;
 
         /* animation: name duration timing-function delay iteration-count direction fill-mode; */
         animation: slideLef 5s;
