grid image item height set to 90%

--- a/src/styles/pages/home.css
+++ b/src/styles/pages/home.css
@@ -155,7 +155,7 @@
     
     .home-container .grid-container .grid-item img{
         width: 100%;
-        height: 60%;
+        height: 50%;
         border-radius: 20px;
     }
     
@@ -175,14 +175,14 @@
 
     @keyframes pricePulse {
         0%{
-            font-size: 0px;
+            font-size: 0em;
         }
         50%{
             font-size: 3em;
         }
         
         100%{
-            font-size: 0px;
+            font-size: 0em;
         }
     }
 
@@ -454,7 +454,7 @@
         box-shadow: 5px 5px rgba(0, 0, 0, 0.5);
     
         width: 90%;
-        height: 500px;
+        height: 90%;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -473,8 +473,9 @@
     
     
     .home-container .grid-container .grid-item img{
-        width: 280px;
-        height: 250px;
+        width: 100%;
+        height: 50%;
+        border-radius: 20px;
     }
     
     .home-container .grid-container .grid-item span{
@@ -493,30 +494,17 @@
 
     @keyframes pricePulse {
         0%{
-            font-size: 0px;
+            font-size: 0em;
         }
         50%{
             font-size: 3em;
         }
         
         100%{
-            font-size: 0px;
+            font-size: 0em;
         }
     }
 
-    @keyframes pricePulse {
-        0%{
-            font-size: 0px;
-        }
-        50%{
-            font-size: 3em;
-        }
-        
-        100%{
-            font-size: 0px;
-        }
-    }
-    
     .home-container .services {
         display: flex;
         align-items: center;
@@ -802,8 +790,9 @@
     
     
     .home-container .grid-container .grid-item img{
-        width: 280px;
-        height: 250px;
+        width: 100%;
+        height: 50%;
+        border-radius: 20px;
     }
     
     .home-container .grid-container .grid-item span{
@@ -818,7 +807,19 @@
         font-size: 50px;
         font-weight: 600;
         animation: pricePulse 5s infinite;
-
+    }
+    
+    @keyframes pricePulse {
+        0%{
+            font-size: 0em;
+        }
+        50%{
+            font-size: 3em;
+        }
+        
+        100%{
+            font-size: 0em;
+        }
     }
     
     .home-container .services {
