--- a/src/styles/pages/home.css
+++ b/src/styles/pages/home.css
@@ -261,6 +261,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        flex-direction: column;
         width: 95%;
         height: 500px;
         margin: auto;
@@ -578,6 +579,8 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        flex-direction: column;
+
         width: 92%;
         height: 200px;
         margin: auto;
@@ -895,6 +898,8 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        flex-direction: column;
+
         width: 92%;
         height: 200px;
         margin: auto;
