menu-mobile from right top corner 30s with border radius 50em on the bottom left

--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -20,6 +20,7 @@
         height: 100%;
 
         background-color: #1B1D20;
+        border-bottom-left-radius: 50em;
 
         /* animation: name duration timing-function delay iteration-count direction fill-mode; */
         animation: slideLef 30s;
@@ -177,10 +178,10 @@
         height: 100%;
 
         background-color: #1B1D20;
-        border-top-left-radius: 20px;
+        border-bottom-left-radius: 50em;
 
         /* animation: name duration timing-function delay iteration-count direction fill-mode; */
-        animation: slideLef 5s;
+        animation: slideLef 30s;
 
     }
 
@@ -337,8 +338,7 @@
         height: 100%;
 
         background-color: #1B1D20;
-        border-top-left-radius: 20px;
-        border-bottom-left-radius: 20px;
+        border-bottom-left-radius: 50em;
 
         /* animation: name duration timing-function delay iteration-count direction fill-mode; */
         animation: slideLef 30s;
