--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -1,6 +1,6 @@
-/* Responsive 460px ======================================================================= */
+/* =========================================================================================== */
 
-@media (min-width: 360px) {
+@media (min-width: 260px) {
     header {
         display: flex;
         align-items: center;
@@ -15,15 +15,17 @@
         position: fixed;
         top: 0;
         right: 0;
+
+        z-index: 2;
         
         width: 100%;
         height: 100%;
 
-        background-color: #1B1D20;
+        background-color: rgba(255, 255, 255, 0.1);
         border-bottom-left-radius: 50em;
 
         /* animation: name duration timing-function delay iteration-count direction fill-mode; */
-        animation: slideLef 30s;
+        animation: slideLef 1s;
 
     }
 
@@ -47,7 +49,7 @@
         right: 10%;
         left: 10%;
 
-        animation: slideLef 2s;
+        animation: slideLef 1s;
 
     }
 
@@ -57,25 +59,25 @@
         margin-bottom: 15%;
     }
 
-    header .menu-mobile ul li a {
+    header .menu-mobile ul li .menu-mobile-link-item {
         text-decoration: none;
-        font-size: 16px;
+        font-size: 20px;
         color: #F0F0F4;
+    }
+
+    header .menu-mobile ul li .menu-mobile-link-item:hover {
+        border-bottom: 1px solid #F0F0F4;
     }
     
     header #logo {
         width: 300px;
         height: 300px;
-        position: absolute;
-
-        top: 10%;
-        left: 10%;
-        right: 10%;
+        text-align: center;
     }
     
     header ul {
         display: none;
-        animation: slideLef 2s;
+        animation: slideLef 1s;
     }
     
     header ul li {
@@ -94,71 +96,55 @@
     }
     
     header ul li a:hover {
-        color: #511A80;
-        border-bottom: 1px solid #511A80;
+        color: #F0F0F4;
+        border-bottom: 1px solid #F0F0F4;
+    }
+
+    header .menu-button-active > img {
+        width: 50px;
+        height: 50px;
+    }
+
+    header .menu-x-button-active > img {
+        width: 50px;
+        height: 70px;
     }
 
     header .menu-button-active {
         all: unset;
-        display: block;
         border: none;
         
         width: 40px;
         height: 40px;
 
         position: absolute;
-        right: 10px;
-        top: 10px;
+        right: 15px;
+        top: 15px;
+
+        z-index: 2;
+
+        cursor: pointer;
+
     }
     
     header .menu-x-button-active {
         all: unset;
-        display: block;
         border: none;
         
-        width: 60px;
-        height: 60px;
-        
         position: absolute;
-        right: 10px;
-        top: 10px;
-    }
+        right: 5px;
+        top: 5px;
 
-    header .menu-button-inactive {
-        display: none;
-    }
+        z-index: 2;
 
-    header .menu-x-button-inactive {
-        display: none;
-    }
+        cursor: pointer;
 
-    header .menu-button {
-        animation: pulse 0.5s infinite;
     }
-
-    @keyframes pulse {
-        0% {
-            background: #1B1D20;
-        }
-        25% {
-            background: #2a0845;
-        }
-        25% {
-            background: #2a0845;
-        }
-        75% {
-            background: #2a0845;
-        }
-        100% {
-            background: #1B1D20;
-        }
-    }
-
 }
 
-/* Responsive max 760px ======================================================================= */
+/* ============================================================================================================= */
 
-@media (min-width: 560px){
+@media (min-width: 1200px){
     header {
         display: flex;
         align-items: center;
@@ -173,15 +159,18 @@
         position: fixed;
         top: 0;
         right: 0;
+
+        z-index: 2;
         
         width: 25%;
         height: 100%;
 
-        background-color: #1B1D20;
+        background-color: rgba(255, 255, 255, 0.1);
+
         border-bottom-left-radius: 50em;
 
         /* animation: name duration timing-function delay iteration-count direction fill-mode; */
-        animation: slideLef 30s;
+        animation: slideLef 1s;
 
     }
 
@@ -205,7 +194,7 @@
         right: 10%;
         left: 10%;
 
-        animation: slideLef 2s;
+        animation: slideLef 1s;
 
     }
 
@@ -215,24 +204,25 @@
         margin-bottom: 15%;
     }
 
-    header .menu-mobile ul li a {
+    header .menu-mobile ul li .menu-mobile-link-item {
         text-decoration: none;
-        font-size: 16px;
+        font-size: 20px;
         color: #F0F0F4;
+    }
+
+    header .menu-mobile ul li .menu-mobile-link-item:hover {
+        border-bottom: 1px solid #F0F0F4;
     }
     
     header #logo {
         width: 300px;
         height: 300px;
-        position: absolute;
-
-        top: 0;
-        left: 0;
+        text-align: center;
     }
     
     header ul {
         display: none;
-        animation: slideLef 2s;
+        animation: slideLef 1s;
     }
     
     header ul li {
@@ -251,74 +241,53 @@
     }
     
     header ul li a:hover {
-        color: #511A80;
-        border-bottom: 1px solid #511A80;
+        color: #F0F0F4;
+        border-bottom: 1px solid #F0F0F4;
+    }
+
+    header .menu-button-active > img {
+        width: 50px;
+        height: 50px;
+    }
+
+    header .menu-x-button-active > img {
+        width: 50px;
+        height: 70px;
     }
 
     header .menu-button-active {
         all: unset;
-        display: block;
         border: none;
         
         width: 40px;
         height: 40px;
 
         position: absolute;
-        right: 10px;
-        top: 10px;
+        right: 15px;
+        top: 15px;
+
+        z-index: 2;
 
         cursor: pointer;
     }
     
     header .menu-x-button-active {
         all: unset;
-        display: block;
         border: none;
         
-        width: 60px;
-        height: 60px;
-        
         position: absolute;
-        right: 10px;
-        top: 10px;
+        right: 5px;
+        top: 5px;
 
         cursor: pointer;
-    }
 
-    header .menu-button-inactive {
-        display: none;
-    }
-
-    header .menu-x-button-inactive {
-        display: none;
-    }
-
-    header .menu-button {
-        animation: pulse 0.5s infinite;
-    }
-
-    @keyframes pulse {
-        0% {
-            background: #1B1D20;
-        }
-        25% {
-            background: #2a0845;
-        }
-        25% {
-            background: #2a0845;
-        }
-        75% {
-            background: #2a0845;
-        }
-        100% {
-            background: #1B1D20;
-        }
+        z-index: 2;
     }
 }
 
-/* Responsive max 1mipx ======================================================================= */
+/* ================================================================================= */
 
-@media (min-width: 720px){
+@media (min-width: 5200px){
     header {
         display: flex;
         align-items: center;
@@ -333,15 +302,18 @@
         position: fixed;
         top: 0;
         right: 0;
+
+        z-index: 2;
         
         width: 25%;
         height: 100%;
 
-        background-color: #1B1D20;
+        background-color: rgba(255, 255, 255, 0.1);
+
         border-bottom-left-radius: 50em;
 
         /* animation: name duration timing-function delay iteration-count direction fill-mode; */
-        animation: slideLef 30s;
+        animation: slideLef 1s;
 
     }
 
@@ -365,34 +337,35 @@
         right: 10%;
         left: 10%;
 
-        animation: slideLef 2s;
+        animation: slideLef 1s;
 
     }
-
+    
     header .menu-mobile ul li{
         list-style: none;
         margin-top: 15%;
         margin-bottom: 15%;
     }
-
-    header .menu-mobile ul li a {
+    
+    header .menu-mobile ul li .menu-mobile-link-item {
         text-decoration: none;
-        font-size: 16px;
+        font-size: 20px;
         color: #F0F0F4;
+    }
+
+    header .menu-mobile ul li .menu-mobile-link-item:hover {
+        border-bottom: 1px solid #F0F0F4;
     }
     
     header #logo {
         width: 300px;
         height: 300px;
-        position: absolute;
-
-        top: 0;
-        left: 0;
+        text-align: center;
     }
     
     header ul {
         display: none;
-        animation: slideLef 2s;
+        animation: slideLef 1s;
     }
     
     header ul li {
@@ -411,67 +384,41 @@
     }
     
     header ul li a:hover {
-        color: #511A80;
-        border-bottom: 1px solid #511A80;
+        color: #F0F0F4;
+        border-bottom: 1px solid #F0F0F4;
     }
 
+    header .menu-button-active > img {
+        width: 50px;
+        height: 50px;
+    }
+
+    header .menu-x-button-active > img {
+        width: 50px;
+        height: 70px;
+    }
+    
     header .menu-button-active {
         all: unset;
-        display: block;
-        border: none;
-        
-        width: 40px;
-        height: 40px;
+        border: none;  
 
         position: absolute;
-        right: 10px;
-        top: 10px;
+        right: 15px;
+        top: 15px;
+
+        z-index: 2;
 
         cursor: pointer;
     }
     
     header .menu-x-button-active {
-        all: unset;
-        display: block;
         border: none;
-        
-        width: 60px;
-        height: 60px;
-        
         position: absolute;
-        right: 10px;
-        top: 10px;
+        right: 15px;
+        top: 5px;
+
+        z-index: 2;
 
         cursor: pointer;
-    }
-
-    header .menu-button-inactive {
-        display: none;
-    }
-
-    header .menu-x-button-inactive {
-        display: none;
-    }
-
-    header .menu-button {
-        animation: pulse 0.5s infinite;
-    }
-
-    @keyframes pulse {
-        0% {
-            background: #1B1D20;
-        }
-        25% {
-            background: #2a0845;
-        }
-        25% {
-            background: #2a0845;
-        }
-        75% {
-            background: #2a0845;
-        }
-        100% {
-            background: #1B1D20;
-        }
     }
 }
