--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -1,6 +1,6 @@
 /* =========================================================================================== */
 
-@media (min-width: 260px) {
+@media (min-width: 160px) {
     header {
         display: flex;
         align-items: center;
@@ -19,6 +19,292 @@
         z-index: 2;
         
         width: 100%;
+        height: 100%;
+
+        background-color: rgba(255, 255, 255, 0.1);
+        border-bottom-left-radius: 50em;
+
+        /* animation: name duration timing-function delay iteration-count direction fill-mode; */
+        animation: slideLef 1s;
+
+    }
+
+    @keyframes slideLef {
+        from {
+            transform: translate(100%, -100%);
+        }
+        to{
+            transform: translate(0, 0);
+        }   
+    }   
+
+    header .menu-mobile ul {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+
+        position: absolute;
+        top: 10%;
+        right: 10%;
+        left: 10%;
+
+        animation: slideLef 1s;
+
+    }
+
+    header .menu-mobile ul li{
+        list-style: none;
+        margin-top: 15%;
+        margin-bottom: 15%;
+    }
+
+    header .menu-mobile ul li .menu-mobile-link-item {
+        text-decoration: none;
+        font-size: 20px;
+        color: #F0F0F4;
+    }
+
+    header .menu-mobile ul li .menu-mobile-link-item:hover {
+        border-bottom: 1px solid #F0F0F4;
+    }
+    
+    header #logo {
+        width: 300px;
+        height: 300px;
+        text-align: center;
+    }
+    
+    header ul {
+        display: none;
+        animation: slideLef 1s;
+    }
+    
+    header ul li {
+        list-style: none;
+    }
+    
+    header ul li a{
+        font-size: 16px;
+        color: #FFF;
+        text-decoration: none;
+        letter-spacing: 2px;
+        
+        transition-property: color, border;
+        transition-duration: 1s;
+        
+    }
+    
+    header ul li a:hover {
+        color: #F0F0F4;
+        border-bottom: 1px solid #F0F0F4;
+    }
+
+    header .menu-button-active > img {
+        width: 50px;
+        height: 50px;
+    }
+
+    header .menu-x-button-active > img {
+        width: 50px;
+        height: 70px;
+    }
+
+    header .menu-button-active {
+        all: unset;
+        border: none;
+        
+        width: 40px;
+        height: 40px;
+
+        position: absolute;
+        right: 15px;
+        top: 15px;
+
+        z-index: 2;
+
+        cursor: pointer;
+
+    }
+    
+    header .menu-x-button-active {
+        all: unset;
+        border: none;
+        
+        position: absolute;
+        right: 5px;
+        top: 5px;
+
+        z-index: 2;
+
+        cursor: pointer;
+
+    }
+}
+
+@media (min-width: 600px) {
+    header {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    
+        width: 100%;
+        height: 10%;
+        position: relative;
+    }
+
+    header .menu-mobile {
+        position: fixed;
+        top: 0;
+        right: 0;
+
+        z-index: 2;
+        
+        width: 100%;
+        height: 100%;
+
+        background-color: rgba(255, 255, 255, 0.1);
+        border-bottom-left-radius: 50em;
+
+        /* animation: name duration timing-function delay iteration-count direction fill-mode; */
+        animation: slideLef 1s;
+
+    }
+
+    @keyframes slideLef {
+        from {
+            transform: translate(100%, -100%);
+        }
+        to{
+            transform: translate(0, 0);
+        }   
+    }   
+
+    header .menu-mobile ul {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+
+        position: absolute;
+        top: 10%;
+        right: 10%;
+        left: 10%;
+
+        animation: slideLef 1s;
+
+    }
+
+    header .menu-mobile ul li{
+        list-style: none;
+        margin-top: 15%;
+        margin-bottom: 15%;
+    }
+
+    header .menu-mobile ul li .menu-mobile-link-item {
+        text-decoration: none;
+        font-size: 20px;
+        color: #F0F0F4;
+    }
+
+    header .menu-mobile ul li .menu-mobile-link-item:hover {
+        border-bottom: 1px solid #F0F0F4;
+    }
+    
+    header #logo {
+        width: 300px;
+        height: 300px;
+        text-align: center;
+    }
+    
+    header ul {
+        display: none;
+        animation: slideLef 1s;
+    }
+    
+    header ul li {
+        list-style: none;
+    }
+    
+    header ul li a{
+        font-size: 16px;
+        color: #FFF;
+        text-decoration: none;
+        letter-spacing: 2px;
+        
+        transition-property: color, border;
+        transition-duration: 1s;
+        
+    }
+    
+    header ul li a:hover {
+        color: #F0F0F4;
+        border-bottom: 1px solid #F0F0F4;
+    }
+
+    header .menu-button-active > img {
+        width: 50px;
+        height: 50px;
+    }
+
+    header .menu-x-button-active > img {
+        width: 50px;
+        height: 70px;
+    }
+
+    header .menu-button-active {
+        all: unset;
+        border: none;
+        
+        width: 40px;
+        height: 40px;
+
+        position: absolute;
+        right: 15px;
+        top: 15px;
+
+        z-index: 2;
+
+        cursor: pointer;
+
+    }
+    
+    header .menu-x-button-active {
+        all: unset;
+        border: none;
+        
+        position: absolute;
+        right: 5px;
+        top: 5px;
+
+        z-index: 2;
+
+        cursor: pointer;
+
+    }
+}
+
+/* ==================================================================================================== */
+
+@media (min-width: 800px) {
+    header {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    
+        width: 100%;
+        height: 10%;
+        position: relative;
+    }
+
+    header .menu-mobile {
+        position: fixed;
+        top: 0;
+        right: 0;
+
+        z-index: 2;
+        
+        width: 25%;
         height: 100%;
 
         background-color: rgba(255, 255, 255, 0.1);
