--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -21,7 +21,7 @@
         width: 100%;
         height: 100%;
 
-        background-color: rgba(255, 255, 255, 0.1);
+        background-color: #F0F0F4;
         border-bottom-left-radius: 50em;
 
         /* animation: name duration timing-function delay iteration-count direction fill-mode; */
@@ -62,11 +62,11 @@
     header .menu-mobile ul li .menu-mobile-link-item {
         text-decoration: none;
         font-size: 20px;
-        color: #F0F0F4;
+        color: #000000;
     }
 
     header .menu-mobile ul li .menu-mobile-link-item:hover {
-        border-bottom: 1px solid #F0F0F4;
+        border-bottom: 1px solid #000000;
     }
     
     header #logo {
@@ -163,7 +163,7 @@
         width: 100%;
         height: 100%;
 
-        background-color: rgba(255, 255, 255, 0.1);
+        background-color: #F0F0F4;
         border-bottom-left-radius: 50em;
 
         /* animation: name duration timing-function delay iteration-count direction fill-mode; */
@@ -204,11 +204,11 @@
     header .menu-mobile ul li .menu-mobile-link-item {
         text-decoration: none;
         font-size: 20px;
-        color: #F0F0F4;
+        color: #000000;
     }
 
     header .menu-mobile ul li .menu-mobile-link-item:hover {
-        border-bottom: 1px solid #F0F0F4;
+        border-bottom: 1px solid #000000;
     }
     
     header #logo {
@@ -307,7 +307,7 @@
         width: 25%;
         height: 100%;
 
-        background-color: rgba(255, 255, 255, 0.1);
+        background-color: #F0F0F4;
         border-bottom-left-radius: 50em;
 
         /* animation: name duration timing-function delay iteration-count direction fill-mode; */
@@ -348,11 +348,11 @@
     header .menu-mobile ul li .menu-mobile-link-item {
         text-decoration: none;
         font-size: 20px;
-        color: #F0F0F4;
+        color: #000000;
     }
 
     header .menu-mobile ul li .menu-mobile-link-item:hover {
-        border-bottom: 1px solid #F0F0F4;
+        border-bottom: 1px solid #000000;
     }
     
     header #logo {
@@ -451,7 +451,7 @@
         width: 25%;
         height: 100%;
 
-        background-color: rgba(255, 255, 255, 0.1);
+        background-color: #F0F0F4;
 
         border-bottom-left-radius: 50em;
 
@@ -493,11 +493,11 @@
     header .menu-mobile ul li .menu-mobile-link-item {
         text-decoration: none;
         font-size: 20px;
-        color: #F0F0F4;
+        color: #000000;
     }
 
     header .menu-mobile ul li .menu-mobile-link-item:hover {
-        border-bottom: 1px solid #F0F0F4;
+        border-bottom: 1px solid #000000;
     }
     
     header #logo {
@@ -594,7 +594,7 @@
         width: 25%;
         height: 100%;
 
-        background-color: rgba(255, 255, 255, 0.1);
+        background-color: #F0F0F4;
 
         border-bottom-left-radius: 50em;
 
@@ -636,11 +636,11 @@
     header .menu-mobile ul li .menu-mobile-link-item {
         text-decoration: none;
         font-size: 20px;
-        color: #F0F0F4;
+        color: #000000;
     }
 
     header .menu-mobile ul li .menu-mobile-link-item:hover {
-        border-bottom: 1px solid #F0F0F4;
+        border-bottom: 1px solid #000000;
     }
     
     header #logo {
