--- a/src/styles/pages/home.css
+++ b/src/styles/pages/home.css
@@ -243,9 +243,11 @@
     }
     
     footer .direitos-container {
+        border-top: 1px solid #F0F0F4;
         width: 95%;
         height: 200px;
         margin: auto;
+        margin-top: 100px;
 
         display: flex;
         align-items: center;
@@ -529,9 +531,11 @@
     }
     
     footer .direitos-container {
+        border-top: 1px solid #F0F0F4;
         width: 95%;
         height: 200px;
         margin: auto;
+        margin-top: 100px;
 
         display: flex;
         align-items: center;
@@ -812,9 +816,11 @@
     }
     
     footer .direitos-container {
+        border-top: 1px solid #F0F0F4;
         width: 95%;
         height: 200px;
         margin: auto;
+        margin-top: 100px;
 
         display: flex;
         align-items: center;
@@ -1106,6 +1112,7 @@
         width: 100%;
         height: 200px;
         margin: auto;
+        margin-top: 100px;
 
         display: flex;
         align-items: center;
@@ -1399,6 +1406,7 @@
         width: 100%;
         height: 200px;
         margin: auto;
+        margin-top: 100px;
 
         display: flex;
         align-items: center;
