--- a/src/global.css
+++ b/src/global.css
@@ -3,12 +3,14 @@
     padding: 0;
     box-sizing: border-box;
 
-    font-family: 'Titillium Web', sans-serif;}
+    font-family: 'Titillium Web', sans-serif;
+}
+
 
 html, body {
     width: 100%;
     height: 100%;
     overflow-x: hidden;
     scroll-behavior: smooth;
-    background: #000;
+    background: #000000;
 }
